GNOME Bugzilla – Bug 651198
last/libre.fm data lists (i.e. Recent Tracks) do not resize correctly
Last modified: 2011-05-27 00:29:13 UTC
Created attachment 188715 [details] [review] use EggWrapBox Shrinking the width of the page does not cause the number of columns to decrease any more. This results in horizontal scrollbars appearing which isn't what we want. This broke with the change to gtk3. Attached patch uses EggWrapBox instead of the previous hack using GtkTable and a custom allocation function. Fixes bug and seems to be more efficient too.
Review of attachment 188715 [details] [review]: I haven't tried this, but it looks sensible.