audioscrobbler: use EggWrapBox to display data lists

https://bugzilla.gnome.org/show_bug.cgi?id=651198